--- a/404.html
+++ b/404.html
@@ -72,12 +72,20 @@
 
 <body>
   <header class="site-header">
-    <div class="container">
-      <a class="brand-wrap" href="/">
-        <img src="/assets/img/logo.png" alt="System & Flow logo" />
-      </a>
-    </div>
-  </header>
+  <div class="container">
+    <a href="/" class="brand-wrap" aria-label="System & Flow homepage">
+      <img src="/assets/img/logo.png" alt="System & Flow logo" />
+      <span class="brand">System & Flow</span>
+    </a>
+    <nav>
+      <ul class="nav-links">
+        <li><a href="/">Home</a></li>
+        <li><a href="/apps.html">Tools</a></li>
+        <li><a href="/contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
 
   <main>
     <section class="rfr-hero">
