--- a/about.html
+++ b/about.html
@@ -33,15 +33,14 @@
 </head>
 
 <body>
-  <a class="skip-link" href="#main">Skip to content</a>
-
   <!-- Injected Header -->
   <div id="header-placeholder"></div>
 
   <main id="main">
     <!-- Hero -->
     <section class="hero">
-      <div class="container" style="text-align:center">
+      <div class="container">
+        <img src="/assets/img/snf_logo.png" alt="System & Flow" class="hero-logo" />
         <h1>Smart Tools for Smarter PMs</h1>
         <p class="sub">We build tools that speak fluent chaos—then translate it into clarity.</p>
       </div>
@@ -74,7 +73,7 @@
             <button class="button primary" type="submit">Join</button>
           </div>
         </form>
-        <div id="about-wait-ok" class="success" role="status" aria-live="polite">✅ You’re on the list.</div>
+        <div id="about-wait-ok" class="success" role="status" aria-live="polite" style="display:none">✅ You’re on the list.</div>
         <p class="small muted" style="margin-top:8px">
           No spam. Just smart tools and sharper PM moves. Unsubscribe anytime.
         </p>
